chore: added 'Dockerfile' to .gitignore, removed extra files

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 .vscode/
 .DS_Store
 */.DS_Store
+Dockerfile
 
 .build/
 */*/.build/
@@ -12,10 +13,7 @@ minishell
 */*.swp
 */*.swo
 
-src/parser/syntax_tree_refactored.c
-
 en.subject.pdf
-testt.txt
 
 rl.supp
 memleaks.log
