add: ft_strstr to libft
add: verification of valid wildcards and get substr to search in file name

--- a/lib/libft/Makefile
+++ b/lib/libft/Makefile
@@ -27,7 +27,7 @@ LIBFT_SRC	= $(addprefix $(LIBFT_PATH)/, ft_isalpha.c ft_isdigit.c ft_isalnum.c \
 	ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c \
 	ft_putnbr_fd.c ft_lstnew.c ft_lstadd_front.c ft_lstsize.c \
 	ft_lstlast.c ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c \
-	ft_lstiter.c ft_lstmap.c ft_strcmp.c)
+	ft_lstiter.c ft_lstmap.c ft_strcmp.c ft_strstr.c)
 
 FTPRINTF_PATH = ./ft_printf
 FTPRINTF_SRC	= $(addprefix $(FTPRINTF_PATH)/, ft_printf.c ft_printchar.c \
